--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
