--- a/.github/workflows/deploy_cpanel.yml
+++ b/.github/workflows/deploy_cpanel.yml
@@ -40,4 +40,6 @@ jobs:
         FTP_HOST: ${{ secrets.FTP_HOST }}
         REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
       run: |
-        lftp -c "set ssl:verify-certificate no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R dist $REMOTE_DIR"
+        echo "Starting FTPS deployment..."
+        echo "Connecting to $FTP_HOST..."
+        lftp -d -c "set ssl:verify-certificate no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R dist $REMOTE_DIR" || echo "FTPS deployment failed with exit code $?"
