--- a/.github/workflows/deploy_cpanel.yml
+++ b/.github/workflows/deploy_cpanel.yml
@@ -33,13 +33,22 @@ jobs:
     - name: Install lftp
       run: sudo apt-get install lftp
 
-    - name: Deploy to Safe Encrypt
-      env:
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        FTP_HOST: ${{ secrets.FTP_HOST }}
-        REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
-      run: |
-        echo "Starting FTPS deployment..."
-        echo "Connecting to $FTP_HOST..."
-        lftp -d -c "set ssl:verify-certificate no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R dist $REMOTE_DIR" || echo "FTPS deployment failed with exit code $?"
+    - name: FTP Deploy
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./dist/
+        server-dir: ${{ secrets.REMOTE_DIR }}/
+        dangerous-clean-slate: false
+    # - name: Deploy to Safe Encrypt
+    #   env:
+    #     FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+    #     FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+    #     FTP_HOST: ${{ secrets.FTP_HOST }}
+    #     REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
+    #   run: |
+    #     echo "Starting FTPS deployment..."
+    #     echo "Connecting to $FTP_HOST..."
+    #     lftp -d -c "set ssl:verify-certificate no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R dist $REMOTE_DIR" || echo "FTPS deployment failed with exit code $?"
