--- a/.github/workflows/deploy_cpanel.yml
+++ b/.github/workflows/deploy_cpanel.yml
@@ -40,7 +40,7 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
-        server-dir: ${{ secrets.REMOTE_DIR }}/
+        server-dir: .
         dangerous-clean-slate: false
     # - name: Deploy to Safe Encrypt
     #   env:
